<<<<<<< HEAD
<resources>
    <string name="app_name">Build Reminder</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="fill_out_the_fields_and_hit_the_save_button_to_add_it">Fill out the fields and hit the Save Button to add it!</string>
    <string name="name">Name*</string>
    <string name="type">Type*</string>
    <string name="dose">Dose*</string>
    <string name="mg">1000mg</string>
    <string name="amount">Amount*</string>
    <string name="reminders">Reminders</string>
    <string name="date">Date</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="next">Next</string>
    <string name="today">Today</string>
    <string name="add_your_meds_to_be_reminded_on_time_and_track_your_health">Add our meds to be reminded on time and track your health</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete</string>
    <string name="medicine_date">Medicine Date</string>
    <string name="medicine_title">Medicine Title</string>
    <string name="medicine_message">Medicine Message</string>
</resources>
=======
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Medical App</string>
    <string name="august_6_2024">August 6, 2024</string>
    <string name="aspirin">Aspirin</string>
    <string name="_500_mg">500 mg</string>
    <string name="taken">Taken</string>
    <string name="skipped">Skipped</string>
    <string name="register">Register</string>
    <string name="hello_register_to_get_started">Hello! Register to get Started</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_do">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="fill_out_the_fields_and_hit_the_save_button_to_add_it">Fill out the fields and hit the Save Button to add it!</string>
    <string name="name_e_g_ibuprofen">Name (e.g. Ibuprofen)</string>
    <string name="dose_e_g_100mg">Dose (e.g. 100mg)</string>
    <string name="amount_e_g_3">Amount (e.g. 3)</string>
    <string name="reminders">Reminders</string>
    <string name="dd_mm_yyyy_00_00">dd/mm/yyyy , 00:00</string>
    <string name="turn_on_alarm">Turn on Alarm</string>
    <string name="save">Save</string>
    <string name="edit_password">"Reset Password "</string>
    <string name="name">Name</string>
    <string name="password3">Password</string>
    <string name="incorrectemail">Incorrect Email</string>
    <string name="incorrectpass">Incorrect Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="resetpassword">Reset password</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="resetEmail">Enter Your Email</string>
    <string name="btnReset">Send an Email</string>
    <string name="hello_nregister">"Hello!\nRegister To Get Started "</string>
    <string name="user">" Username"</string>
    <string name="users">"  Username"</string>
    <string name="email2">"  Email"</string>
    <string name="passcode">"  Password"</string>
    <string name="welcome_nback">Welcome\nBack!</string>
    <string name="get_started">Get Started</string>
    <string name="forgot">Forget Password?</string>
    <string name="type">Type*</string>
    <string name="dose">Dose*</string>
    <string name="name2">Name*</string>
    <string name="mg">1000mg</string>
    <string name="amount">Amount*</string>
    <string name="date">Date</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="today">Today</string>
    <string name="next">Next</string>
    <string name="add_your_meds_to_be_reminded_on_time_and_track_your_health">Add our meds to be reminded on time and track your health</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="sign_out">Sign Out</string>
    <string name="medicine_title">Medicine Title</string>
    <string name="medicine_message">Medicine Message</string>
    <string name="medicine_date">Medicine Date</string>
    <string name="delete">Delete</string>


</resources>
>>>>>>> secondary/main
