<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/medicineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/medicineMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_message" />

    <TextView
        android:id="@+id/medicineDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_date" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
</LinearLayout>