<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/incorrectemail"
            android:layout_width="407dp"
            android:layout_height="21dp"
            android:text="@string/incorrectemail"
            android:textColor="@color/design_default_color_error"
            android:textSize="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="64dp"
            android:autofillHints=""
            android:background="@drawable/edit_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="166dp"
            android:layout_height="103dp"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="164dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/white"
            android:text="@string/forgot"
            android:textColor="@color/purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.705" />

        <TextView
            android:id="@+id/incorrectpass"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/edit_password"
            android:layout_alignParentBottom="true"
            android:textColor="@color/design_default_color_error"
            android:textSize="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />


        <TextView
            android:id="@+id/empty"
            android:layout_width="387dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="528dp"
            android:textColor="@color/design_default_color_error"
            android:textSize="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="160dp"

            android:height="50dp"
            android:autofillHints=""
            android:background="@drawable/edit_background"
            android:hint="@string/password3"
            android:inputType="textPassword"
            android:paddingStart="13dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>